--- a/vanilla/guess-the-word/src/styles/label.css
+++ b/vanilla/guess-the-word/src/styles/label.css
@@ -20,3 +20,10 @@
 .label[data-type="radio"]:focus-within {
   color: var(--label-text, #333);
 }
+
+.label__text {
+  display: inline-flex;
+  column-gap: 4px;
+  align-items: center;
+  flex-wrap: wrap;
+}
